# cookicutter-fastapi-nextjs-llm

./: README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/backend/: .dockerignore  .env.example  .env.template  .gitignore  CQRS_GUIDE.md  Dockerfile  PERSISTENCE_GUIDE.md  README.md  TEAM_CHAT_INTEGRATION.md  alembic.ini  config_template.env  env.template  pyproject.toml  pytest.ini
{{cookiecutter.project_slug}}/backend/alembic/: env.py
{{cookiecutter.project_slug}}/backend/alembic/versions/: 001_initial_migration.py  001_initial_schema.py
{{cookiecutter.project_slug}}/backend/app/: __init__.py  cli.py  config.py  dependencies.py  exceptions.py  llm_client.py  main.py  middleware.py  websocket_manager.py
{{cookiecutter.project_slug}}/backend/app/agents/: README.md  __init__.py  base.py  enhanced_llm_team_example.py  llm_team_example.py  orchestrator.py  registry.py
{{cookiecutter.project_slug}}/backend/app/agents/agents/: __init__.py  context_manager.py  customer_support.py
{{cookiecutter.project_slug}}/backend/app/agents/prompt/: __init__.py  context_manager.py  customer_support.py
{{cookiecutter.project_slug}}/backend/app/agents/structured_output/: __init__.py  context_manager.py  customer_support.py
{{cookiecutter.project_slug}}/backend/app/agents/tool/: __init__.py  context_manager.py  customer_support.py
{{cookiecutter.project_slug}}/backend/app/api/: __init__.py  deps.py  response_wrapper.py
{{cookiecutter.project_slug}}/backend/app/api/v1/: __init__.py  auth.py  chat.py  completions.py  health.py  metrics.py  router.py  tasks.py  team_chat.py
{{cookiecutter.project_slug}}/backend/app/cli/: README.md  __init__.py  main.py  router.py
{{cookiecutter.project_slug}}/backend/app/cli/commands/: __init__.py  cache.py  database.py  health.py  llm.py  logs.py  server.py  setup.py  training.py  worker.py
{{cookiecutter.project_slug}}/backend/app/core/: __init__.py  celery_app.py  config_validator.py  container.py  exceptions.py  monitoring.py  retry.py  tracing.py
{{cookiecutter.project_slug}}/backend/app/core/config/: __init__.py  environments.py  secrets.py  settings.py  validation.py
{{cookiecutter.project_slug}}/backend/app/core/cqrs/: __init__.py  bus.py  decorators.py  exceptions.py  handlers.py  interfaces.py
{{cookiecutter.project_slug}}/backend/app/core/llm/: __init__.py  agno_context_manager.py  base.py  custom_client.py  factory.py  openrouter_client.py
{{cookiecutter.project_slug}}/backend/app/core/memory/: __init__.py  agno_memory.py  base.py  factory.py  in_memory.py  persistent_agno_memory.py  pinecone_memory.py  redis_memory.py  weaviate_memory.py
{{cookiecutter.project_slug}}/backend/app/core/monitoring/: database.py
{{cookiecutter.project_slug}}/backend/app/core/security/: __init__.py  auth.py  clerk_auth.py  input_sanitization.py  rate_limit.py
{{cookiecutter.project_slug}}/backend/app/database/: __init__.py  base.py  session.py  transaction.py
{{cookiecutter.project_slug}}/backend/app/database/models/: __init__.py  agent.py  agent_run.py  api_key.py  chat_message.py  chat_session.py  completion.py  conversation.py  message.py  task_result.py  user.py
{{cookiecutter.project_slug}}/backend/app/database/repositories/: __init__.py  agent.py  agent_run.py  api_key.py  base_async.py  chat_message.py  chat_session.py  completion.py  conversation.py  message.py  model_converter.py  optimized_chat_repository.py  task_result.py  user.py
{{cookiecutter.project_slug}}/backend/app/examples/: agent_example.py  apo_example.py  create_agent_example.py  langchain_example.py  multi_turn_conversation_example.py  sft_example.py  streaming_structured_output_example.py  tool_example.py  training_example.py  verl_example.py
{{cookiecutter.project_slug}}/backend/app/infrastructure/: __init__.py  circuit_breaker.py  langchain_tracing.py  langfuse_handler.py  llm_provider.py
{{cookiecutter.project_slug}}/backend/app/middleware/: __init__.py  rate_limit.py  tracing_middleware.py
{{cookiecutter.project_slug}}/backend/app/models/: __init__.py  api_key.py  base.py  chat.py  completion.py  task.py  user.py
{{cookiecutter.project_slug}}/backend/app/security/: __init__.py  clerk_auth.py
{{cookiecutter.project_slug}}/backend/app/services/: __init__.py  agno_chat_service.py  chat_service.py  chat_service_factory.py  completion_service.py  conversation_service.py  database_chat_service.py  kafka_client.py  rabbitmq_client.py  redis_client.py
{{cookiecutter.project_slug}}/backend/app/tasks/: __init__.py  chat_tasks.py  general_tasks.py  llm_tasks.py
{{cookiecutter.project_slug}}/backend/app/training/: __init__.py  config.py
{{cookiecutter.project_slug}}/backend/app/training/datasets/: __init__.py  base.py
{{cookiecutter.project_slug}}/backend/app/utils/: __init__.py  helpers.py  logging.py  retry.py  structured_streaming.py  token_counter.py
{{cookiecutter.project_slug}}/backend/docker/: Dockerfile  docker-compose.dev.yml  docker-compose.yml  nginx.conf  pgadmin_servers.json.j2
{{cookiecutter.project_slug}}/backend/examples/: simple_example.py  team_chat_example.py  team_chat_usage.py
{{cookiecutter.project_slug}}/backend/guides/: CQRS_GUIDE.md  DISTRIBUTED_TRACING_GUIDE.md  PERSISTENCE_GUIDE.md  TEAM_CHAT_INTEGRATION.md  TESTING_GUIDE.md
{{cookiecutter.project_slug}}/backend/scripts/: deploy.sh  start-with-workers.sh  start.sh  status.sh  stop.sh
{{cookiecutter.project_slug}}/backend/tests/: conftest.py
{{cookiecutter.project_slug}}/backend/tests/integration/: test_chat_api.py  test_health_api.py  test_training_integration.py
{{cookiecutter.project_slug}}/backend/tests/performance/: test_load_testing.py
{{cookiecutter.project_slug}}/backend/tests/unit/: test_auth.py  test_chat_services.py  test_database_optimization.py  test_dependency_injection.py  test_input_sanitization.py  test_llm_implementations.py  test_memory_implementations.py  test_middleware_websocket.py  test_repositories.py  test_retry_circuit_breaker.py  test_tasks_and_background_jobs.py  test_user_repository.py
(+82 files in other folders)
